@@ -181,6 +181,10 @@
   * Fixed bug in DPC+ scheme; 'fast fetch mode' was enabled at startup,
     when it should be disabled by default.
 
+  * Some more work on DPC+ playfield 'jitter' effect for certain older DPC+
+    driver versions; more ROMs are now detected properly.  Special thanks
+    to SpiceWare for his research in this area.
+
   * Added proper Retron77 port.
 
   * Added proper libretro port, and fixed display for OpenGLES renderers.
